k8s-manifests/service.yaml
# hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-bg
spec:
  selector:
    app: hello-world-bg
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
